Přidány informace a další úpravy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
               = 
               <form id="formular">
                  <input id="vysledek" type="number" autocomplete="off"> 
-                 <input class="button button1" type="submit" value="Zkontroluj">
+                 <input class="button button1" type="submit" value="Zkontroluj"> <br>
+                 <a href="vice-o-chytre-matice.html">Více o Chytré Matice</a>
               </form>
               
         </div>
